# merge_sort

./: CMakeLists.txt
include/: merge_sort.h
src/: merge_sort.c
test/: merge_sort_test.c
